# Introd.-to-systems-prog.-MATAM-234124-HW4

./: AllJobs.h  Archer.cpp  CMakeLists.txt  Charachter.cpp  CharachterMaker.cpp  Character.h  CharacterMaker.h  Fast.h  Job.cpp  Job.h  JobMaker.cpp  JobMaker.h  Magical.cpp  Magical.h  Magician.cpp  Magician.h  MatamStory  MatamStory.cpp  MatamStory.h  MatamStoryTest  Player.cpp  Player.h  PlayerMaker.cpp  PlayerMaker.h  README.md  RiskTaking.cpp  RiskTaking.h  Strong.cpp  Strong.h  Warrior.h  log.txt
Adapters/: MatamPlayer.h  PlayerAdapter.h
Charachters/: Character.h  CharacterMaker.h  Responsible.h
Events/: AllEvents.h  Balrog.cpp  Balrog.h  Encounter.cpp  Encounter.h  Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  Monster.cpp  Monster.h  Pack.cpp  Pack.h  PotionsMerchant.cpp  PotionsMerchant.h  Slime.cpp  Slime.h  Snail.cpp  Snail.h  SolarEclipse.cpp  SolarEclipse.h  SpecialEvent.cpp  SpecialEvent.h
Jobs/: Archer.h  Job.h  JobMaker.cpp  JobMaker.h  Magical.h  Magician.h  Strong.h  Warrior.h
Players/: AllCharacters.h  AllJobs.h  Archer.cpp  Archer.h  Character.cpp  Character.h  CharacterMaker.cpp  CharacterMaker.h  Fast.cpp  Fast.h  Job.cpp  Job.h  JobMaker.cpp  JobMaker.h  Magical.cpp  Magical.h  Magician.cpp  Magician.h  MatamPlayer.h  MatamPlayerMaker.h  Player.cpp  Player.h  PlayerMaker.cpp  PlayerMaker.h  PlayerMatamStoryAdapter.h  Responsible.cpp  Responsible.h  RiskTaking.cpp  RiskTaking.h  Strong.cpp  Strong.h  Warrior.cpp  Warrior.h
maybeDelete/: PlayerAdapter.h
